tests/error.out.expected
Uncaught exception: Scanner.Error("tests/error.n00b:1:1 unrecognized char '&'")
Fatal error: exception Scanner.Error("tests/error.n00b:1:1 unrecognized char '&'")
