tests/error.n00b
& = "this will give an error"
